--- a/Histo/.settings/org.eclipse.core.resources.prefs
+++ b/Histo/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//histo/__init__.py=utf8
 encoding/client.py=utf-8
 encoding/pclib.py=utf8
 encoding/summary.py=utf8
