--- a/Histo/.settings/org.eclipse.core.resources.prefs
+++ b/Histo/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//histo/__init__.py=utf8
 encoding//histo/summary.py=utf8
+encoding//test/histo/server.py=utf8
 encoding/pclib.py=utf8
